# webgames

./: .gitignore  README.md  inspect_ai.py
analysis/: README.md  analyse.py  data_summary.md  dataframe_exploration.ipynb  pyproject.toml  webgames_categories.csv  webgames_tasks.jsonl
analysis/outputs/: average_success_rate_per_difficulty.csv  game_model_pass_status_matrix.csv  game_variant_model_pass_status_matrix.csv  i_accept_table.tex  model_category_performance.csv  model_category_performance.tex  model_category_performance_nice.tex  overall_success_per_model.csv  processed_data.pkl  task_families_unsolved_at_any_difficulty.csv  tasks_solved_by_exactly_one_model.csv  tasks_unsolved_by_any_model.csv
analysis/outputs2/: 00_game_id_model_pass_status.csv  01_overall_success_per_model.csv  02_average_success_rate_per_difficulty_globally.csv  03_success_vs_difficulty_per_model.csv  04_success_rate_per_category.csv  05_success_rate_per_difficulty_per_category.csv  06_weighted_unsolved_tasks_by_category.csv  07_model_performance_radar_data.csv  08_tasks_unsolved_by_any_model.csv  09_tasks_solved_by_exactly_one_model.csv  10_parent_tasks_unsolved_at_any_difficulty.csv  claude-3-7-sonnet-20250219_vs_claude-3-7-sonnet-20250219-computeruse_category_comparison.csv  claude-3-7-sonnet-20250219_vs_claude-3-7-sonnet-20250219-computeruse_difficulty_comparison.csv  gemini-2.5-pro-preview-05-06_vs_gemini-2.5-pro-preview-05-06-textonly_category_comparison.csv  gemini-2.5-pro-preview-05-06_vs_gemini-2.5-pro-preview-05-06-textonly_difficulty_comparison.csv  mcp.tex  (+2 more)
(+27 files in other folders)
