[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.96",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pd>=0.0.4",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
]
